# pyaac

./: .env.docker.example  PYAAC_README.md  docker-compose.yml
backend/: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: accounts.py  auth.py  characters.py  deaths.py  guilds.py  highscores.py  news.py  server.py
backend/app/core/: __init__.py  auth.py
backend/app/models/: __init__.py  account.py  character.py  guild.py  news.py  player_death.py
backend/app/schemas/: __init__.py  account.py  character.py  death.py  guild.py  news.py
backend/tests/: __init__.py  conftest.py
frontend/: Dockerfile  README.md  index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts
frontend/src/components/: Button.tsx  Card.tsx  Layout.tsx  Modal.tsx  ProtectedRoute.tsx  RecentDeaths.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useCharacter.ts  useCharacters.ts  useDeaths.ts  useGuild.ts  useGuilds.ts  useHighscores.ts  useNews.ts  useServer.ts
frontend/src/lib/: skills.ts  vocations.ts
frontend/src/pages/: AccountSettingsPage.tsx  CharacterDetailPage.tsx  CharactersPage.tsx  GuildDetailPage.tsx  GuildsPage.tsx  HighscoresPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  ServerStatusPage.tsx
openspec/: project.md
openspec/changes/add-python-clone/: design.md  proposal.md  tasks.md
openspec/changes/add-python-clone/specs/account-management/: spec.md
openspec/changes/add-python-clone/specs/admin-panel/: spec.md
openspec/changes/add-python-clone/specs/character-management/: spec.md
openspec/changes/add-python-clone/specs/guild-management/: spec.md
openspec/changes/add-python-clone/specs/highscores/: spec.md
openspec/changes/add-python-clone/specs/news-system/: spec.md
(+2 files in other folders)
